Fix resource access in a bunch of examples